--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  webview_flutter: ^2.0.10
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +62,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - images/2x/
+    - images/3x/
     - static/index.html
 
   # An image asset can refer to one or more resolution-specific "variants", see
